--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -51,12 +51,12 @@ span{
 .likes{
     color:gold;
     font-size:20px;
-} */
+}
 
 
 /* SECTION TW0 */
 
-/* #userInput{
+#userInput{
     box-shadow: 2px 2px 4px 5px #ccc;
     width: 50%;
     height: 100px;
@@ -79,4 +79,4 @@ span{
     height: 50px;
     text-align: center;
     border-radius: 20px;
-} */
+}
