--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/12ee7a4134.js" crossorigin="anonymous"></script>
     <title>ADD AND VIEW YOUR FAVOURITE MUSICIAN</title>
 </head>
@@ -34,6 +34,6 @@
     </section>
    
 
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
